--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,19 @@
-POSTGRES_USER=user           # Set your PostgreSQL username
-POSTGRES_PASSWORD=securepassword  # Set your PostgreSQL password
+# Logging configuration
+LOG_LEVEL=INFO  # Possible values: DEBUG, INFO, WARNING, ERROR, CRITICAL
+
+# Global configuration
+DB_TYPE=geopackage  # or postgres
+DATA_FOLDER=/path/to/data
+
+# GeoPackage configuration
+GPKG_PATH=/path/to/data/metadata.gpkg
+
+# Postgres configuration
+POSTGRES_USER=GIS           # Set your PostgreSQL username
+POSTGRES_PASSWORD=Inntech  # Set your PostgreSQL password
 POSTGRES_DB=gisdb            # Set the default database name
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432           # Set the port number for PostgreSQL
+
+# Dataforsyning API & Token
+
